fix(upload card): align specs, refactor template logic

--- a/docs/app/views/examples/components/upload_card/_preview.html.erb
+++ b/docs/app/views/examples/components/upload_card/_preview.html.erb
@@ -1,6 +1,6 @@
 <h3 class="t-sage-heading-6">Initial State</h3>
 <%= sage_component SageUploadCard, {
-  selection_label: "Select a file",
+  selection_label: "Select file",
   selection_subtext: "Recommended dimensions or file size requirements",
 } %>
 
@@ -11,7 +11,7 @@
     {name: "contacts.csv"},
   ],
   file_selected: true,
-  selection_label: "Replace file",
+  selection_label: "Edit file",
   selection_subtext: "Recommended dimensions or file size requirements",
 } %>
 
