--- a/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
@@ -8,22 +8,19 @@
 $-upload-card-border-radius: sage-border(radius-large);
 $-upload-card-border-width: 2;
 $-upload-card-selected-width: rem(200px);
+$-upload-card-preview-border-radius: sage-border(radius-medium);
 $-upload-card-preview-width: rem(32px);
 $-upload-card-preview-max-width: rem(190px);
 $-upload-card-preview-max-width-mobile: rem(304px);
 $-upload-card-background: sage-color(white);
-
-.sage-upload-card {
-  &:focus {
-    outline: none;
-  }
-}
 
 .sage-upload-card__body {
   display: flex;
   flex-flow: column;
   align-items: center;
   flex: 1;
+  gap: sage-spacing(sm);
+  color: sage-color(charcoal, 200);
 
   :not(.sage-upload-card--selected) & {
     justify-content: center;
@@ -37,6 +34,7 @@ $-upload-card-background: sage-color(white);
 
   .sage-upload-card--selected & {
     flex-basis: $-upload-card-selected-width;
+    color: sage-color(charcoal, 300);
   }
 }
 
@@ -116,7 +114,7 @@ $-upload-card-background: sage-color(white);
   max-width: $-upload-card-preview-max-width;
   margin-right: 0;
   text-align: center;
-  border-radius: sage-border(radius-sm);
+  border-radius: $-upload-card-preview-border-radius;
 
   .sage-upload-card--selected & {
     width: 100%;
@@ -128,15 +126,9 @@ $-upload-card-background: sage-color(white);
 }
 
 .sage-upload-card__subtext {
-  @extend %t-sage-body-small;
-
-  margin-top: sage-spacing(2xs);
-  color: sage-color(charcoal, 200);
+  @extend %t-sage-body;
 }
 
 .sage-upload-card__text {
   @extend %t-sage-heading-6;
-
-  margin-bottom: sage-spacing(2xs);
-  color: sage-color(charcoal, 400);
 }
