chore(upload card): remove container assignment

--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -652,6 +652,7 @@
 /// Adds the basic default panel setup including grid, spacing, and border treatment
 ///
 @mixin sage-panel() {
+  container-type: inline-size;
   padding: sage-spacing(panel);
   background-color: sage-color(white);
   border: sage-border();
