fix(upload card): examples, file types and a11y fixes

--- a/docs/app/views/examples/components/upload_card/_preview.html.erb
+++ b/docs/app/views/examples/components/upload_card/_preview.html.erb
@@ -15,7 +15,6 @@
 %>
 
 <h3 class="t-sage-heading-6">Default State (no file selected)</h3>
-<p>This layout will adjust from a vertical (stacked) orientation to horizontal depending on available space and/or screen size.</p>
 
 <%= sage_component SageUploadCard, {
   id: "upload-card-default",
@@ -39,7 +38,9 @@
 
 
 <h3 class="t-sage-heading-6">Stacked layout</h3>
-<p>Locks the layout to vertical (stacked) orientation</p>
+<p>The default layout will adjust from a vertical (stacked) orientation to horizontal depending on available space and/or screen size.</p>
+
+<p>Setting <code>stack_layout</code> to <code>true</code> locks the component to its vertical (stacked) orientation.</p>
 
 <%= sage_component SageUploadCard, {
   accepted_files: [
@@ -48,13 +49,13 @@
   file_selected: true,
   selection_preview: "https://placekitten.com/640/480",
   stack_layout: true,
-  id: "upload-card-selected",
+  id: "upload-card-stack",
   selection_label: "Edit file",
   selection_subtext: "Recommended dimensions or file size requirements",
 } %>
 
 <h3 class="t-sage-heading-6">Custom actions</h3>
-<p>Use the <code>sage_upload_card_actions</code> slot to replace the default button and display custom components like dropdowns.</p>
+<p>Use the <code>sage_upload_card_actions</code> slot to replace the default button and display custom components, like dropdowns.</p>
 <%= sage_component SageUploadCard, {
   accepted_files: [
     {name: "my-image-file.jpg"},
