--- a/docs/lib/sage_rails/app/views/sage_components/_sage_upload_card.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_upload_card.html.erb
@@ -5,7 +5,7 @@
   upload_card_classes << 'sage-upload-card--error' if component.has_error.present?
   upload_card_classes << component.generated_css_classes
   upload_card_input_label = component.selection_label.present? ? component.selection_label : "Select a file"
-  upload_card_imagetypes = ['image/*']
+  upload_card_imagetypes = component.accepted_file_types.present? ? component.accepted_file_types.join(",") : "image/*"
 
   upload_card_preview_image_options = {
     class: "sage-upload-card__preview",
@@ -14,7 +14,7 @@
 %>
 <div class="<%= upload_card_classes.join(" ") %>" <%= component.generated_html_attributes.html_safe %>>
   <div class="sage-upload-card__dropzone">
-    <input class="sage-upload-card__input" accept="<%= upload_card_imagetypes %>" multiple="multiple" type="file" autocomplete="off" value="<%= upload_card_input_label %>" name="<%= component.name.present? ? component.name : component.id %>" id="<%= component.id %>" />
+    <input class="sage-upload-card__input" accept="<%= upload_card_imagetypes %>" multiple="multiple" type="file" autocomplete="off" name="<%= component.name.present? ? component.name : component.id %>" id="<%= component.id %>" />
     <% if component.selection_preview.present? %>
       <%= image_tag(component.selection_preview, upload_card_preview_image_options) %>
     <% else %>
@@ -42,6 +42,7 @@
       <% if component.selection_label.present? %>
         <label for="<%= component.id %>" class="sage-upload-card__input-label sage-btn sage-btn--secondary"><%= upload_card_input_label %></label>
       <% elsif content_for? :sage_upload_card_actions %>
+        <label for="<%= component.id %>" class="visually-hidden"><%= upload_card_input_label %></label>
         <%= content_for :sage_upload_card_actions %>
       <% end %>
     </div>
