--- a/docs/app/views/examples/components/upload_card/_preview.html.erb
+++ b/docs/app/views/examples/components/upload_card/_preview.html.erb
@@ -4,63 +4,75 @@
       value: "Upload file",
     }, {
       value: "Select recent file",
-    },
+    }, {
+      style: "danger",
+      modifiers: ["border-before"],
+      value: "Remove image",
+    }
   ]
-
-  dropdown_menu_remove = {
-    icon: "remove-circle",
-    style: "danger",
-    value: "Take A Dangerous Action",
-  }
 %>
 
-<h3 class="t-sage-heading-6">Default State (no file selected)</h3>
+<h3>Default State (no file selected)</h3>
 
 <%= sage_component SageUploadCard, {
   id: "upload-card-default",
   selection_label: "Select file",
-  selection_subtext: "Recommended dimensions or file size requirements",
 } %>
 
+<h3>Selected File State</h3>
 
-<h3 class="t-sage-heading-6">Selected File State</h3>
+<p>Restrict accepted file types using <code>accepted_file_types</code>.</p>
 
 <%= sage_component SageUploadCard, {
   accepted_files: [
     {name: "my-image-file.jpg"},
   ],
   file_selected: true,
-  selection_preview: "https://placekitten.com/520",
+  accepted_file_types: ["image/jpg"],
+  selection_preview: "https://placekitten.com/360",
   id: "upload-card-selected",
-  selection_label: "Edit file",
-  selection_subtext: "Recommended dimensions or file size requirements",
-} %>
+  selection_label: "Edit file"
+} do %>
+  <% content_for :sage_upload_card_instructions do %>
+    <p>Upload a JPEG</p>
+  <% end %>
+<% end %>
 
 
-<h3 class="t-sage-heading-6">Stacked layout</h3>
+<h3>Vertical (stacked) layout</h3>
 <p>The default layout will adjust from a vertical (stacked) orientation to horizontal depending on available space and/or screen size.</p>
 
-<p>Setting <code>stack_layout</code> to <code>true</code> locks the component to its vertical (stacked) orientation.</p>
+<p>Setting <code>stack_layout</code> to <code>true</code> locks the component to the vertical orientation.</p>
 
 <%= sage_component SageUploadCard, {
   accepted_files: [
     {name: "my-image-file.jpg"},
   ],
   file_selected: true,
-  selection_preview: "https://placekitten.com/640/480",
+  selection_preview: "https://placekitten.com/360",
   stack_layout: true,
   id: "upload-card-stack",
   selection_label: "Edit file",
-  selection_subtext: "Recommended dimensions or file size requirements",
-} %>
+} do %>
+  <% content_for :sage_upload_card_instructions do %>
+    <p>Recommended dimensions or file size requirements</p>
+  <% end %>
+<% end %>
 
-<h3 class="t-sage-heading-6">Custom actions</h3>
-<p>Use the <code>sage_upload_card_actions</code> slot to replace the default button and display custom components, like dropdowns.</p>
+<h3>Custom content areas</h3>
+<h4>Instructions area</h4>
+<p>The <code>sage_upload_card_instructions</code> slot provides an area for  extended instructions and custom markup.</p>
+
+<h4>Actions area</h4>
+<p>Use the <code>sage_upload_card_actions</code> slot to replace the default button and display custom components, such as dropdowns.</p>
+<p><strong>NOTE:</strong> a file input field and label are <em>included by default in the base component</em>, as seen in the examples above. When applying a custom file input with `sage_upload_card_actions`, set <code>custom_file_input_field</code> to <code>true</code> to remove these defaults.</p>
 <%= sage_component SageUploadCard, {
   accepted_files: [
-    {name: "my-image-file.jpg"},
+    {name: "fluffy-kitteh.jpg"},
   ],
+  custom_file_input_field: true,
   file_selected: true,
+  selection_preview: "https://placekitten.com/360",
   id: "upload-card-dropdown"
 } do %>
   <% content_for :sage_upload_card_actions do %>
@@ -69,7 +81,7 @@
         <%= sage_component SageButton, {
           style: "secondary",
           icon: { name: "caret-down", style: "right" },
-          value: "Select filezzzz",
+          value: "Edit file",
         } %>
       <% end %>
     <% end %>
@@ -77,13 +89,12 @@
 <% end %>
 
 
-<h3 class="t-sage-heading-6">Error State</h3>
+<h3>Error State</h3>
 
 <%= sage_component SageUploadCard, {
   has_error: true,
   id: "upload-card-error",
   selection_label: "Select a file",
-  selection_subtext: "Recommended dimensions or file size requirements",
   errors: [
     {text: "This is an error message."},
   ]
