fix(icons): add new icons to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -43,6 +43,7 @@ $sage-icons: (
   add-circle: unicode(e902),
   add-image: unicode(e903),
   add-small: unicode(e904),
+  ai-sparkle: unicode(ea02),
   ai-writer: unicode(e91d),
   ai-writer-filled: unicode(e9fb),
   align-center: unicode(e905),
