feat(avatar): update naming in files to generic folks

--- a/docs/app/views/examples/components/avatar/_preview.html.erb
+++ b/docs/app/views/examples/components/avatar/_preview.html.erb
@@ -13,48 +13,48 @@
   <%= sage_component SageAvatar, {
     size: "24px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
   <%= sage_component SageAvatar, {
     size: "32px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
   <%= sage_component SageAvatar, {
     size: "40px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
   <%= sage_component SageAvatar, {
     size: "56px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
   <%= sage_component SageAvatar, {
     size: "72px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
   <%= sage_component SageAvatar, {
     size: "88px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
@@ -70,8 +70,8 @@
     badge: true,
     size: "72px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
@@ -79,8 +79,8 @@
     badge: true,
     size: "88px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
@@ -95,8 +95,8 @@
     badge_icon: "play-circle",
     size: "80px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
@@ -107,8 +107,8 @@
     badge_icon: "danger",
     size: "80px",
     image: {
-      alt: "Court's profile image",
-      src: "avatar/court.png",
+      alt: "Joshua's profile image",
+      src: "avatar/joshua_wilson.png",
       id: "custom_id"
     }
   } %>
@@ -186,8 +186,8 @@
 <%= sage_component SageAvatar, {
   size: "52px",
   image: {
-    alt: "Court's profile image",
-    src: "avatar/court.png",
+    alt: "Joshua's profile image",
+    src: "avatar/joshua_wilson.png",
     id: "custom_id"
   },
   initials: "CA",
