fix(rails-dropdown): resolve multi-select panel closing on option click

--- a/docs/app/views/examples/components/dropdown/_preview.html.erb
+++ b/docs/app/views/examples/components/dropdown/_preview.html.erb
@@ -291,6 +291,7 @@ custom_items = [
 
 <h3 class="t-sage-heading-6">Dropdown Field with full-width Custom Content and Footer</h3>
 <%= sage_component SageDropdown, {
+  allow_multiple: true,
   contained: true,
   full_width_panel: true,
   panel_type: "searchable",
