docs(button): add dos and donts do button

--- a/docs/app/views/examples/components/button/_rules_dont.html.erb
+++ b/docs/app/views/examples/components/button/_rules_dont.html.erb
@@ -1,1 +1,8 @@
-
+<ul>
+  <li>
+    <p>Directing users to a new page or different part within the same page. Instead, use a link.</p>
+  </li>
+  <li>
+    <p>When space is limited consider an IconButton</p>
+  </li>
+</ul>
