--- a/docs/app/views/examples/components/button/_preview.html.erb
+++ b/docs/app/views/examples/components/button/_preview.html.erb
@@ -202,7 +202,7 @@
     color: "danger",
     value: "Deprecated",
   }%> 
-  Subtle buttons are deprecated. Replace Subtle button with a “plain” link or a tertiary button.
+  Subtle buttons are deprecated. Replace Subtle button with a “plain” link.
 </p>
 
 <%= sage_component SageButtonGroup, { gap: :sm, spacer: { bottom: :sm }} do %>
@@ -320,7 +320,7 @@
     color: "danger",
     value: "Deprecated",
   }%> 
-  With the Subtle button being deprecated, this property will be as well. Replace a small button with a “plain” link or a tertiary button.
+  With the Subtle button being deprecated, this property will be as well. Replace a small button with a “plain” link.
 </p>
 
   <%= sage_component SageButton, {
