docs(button): adjusted dont rule for icon button

--- a/docs/app/views/examples/components/button/_rules_dont.html.erb
+++ b/docs/app/views/examples/components/button/_rules_dont.html.erb
@@ -3,6 +3,6 @@
     <p>Directing users to a new page or different part within the same page. Instead, use a link.</p>
   </li>
   <li>
-    <p>When space is limited consider an IconButton</p>
+    <p>When space is limited consider an icon only button.</p>
   </li>
 </ul>
