--- a/docs/app/views/application/_footer.html.erb
+++ b/docs/app/views/application/_footer.html.erb
@@ -17,6 +17,16 @@
       subtle: true,
     } %>
     <%= sage_component SageButton, {
+      value: "SASS Docs",
+      attributes: {
+        href: Rails.application.config.sassdocs_root_url,
+        target: "_blank",
+        rel: "noopener",
+        title: "Open Sassdocs site"
+      },
+      subtle: true,
+    } %>
+    <%= sage_component SageButton, {
       value: "Storybook",
       attributes: {
         href: storybook_url(nil),
