docs(upload card): adds missing button to Rails preview

--- a/docs/app/views/examples/components/upload_card/_preview.html.erb
+++ b/docs/app/views/examples/components/upload_card/_preview.html.erb
@@ -34,6 +34,7 @@
   file_selected: true,
   accepted_file_types: ["image/jpg"],
   selection_preview: "https://placekitten.com/360",
+  selection_label: "Replace file",
   id: "upload-card-selected",
 } do %>
   <% content_for :sage_upload_card_instructions do %>
