fix(copybutton-react): update icon alignment

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -806,6 +806,10 @@ a.sage-btn {
   .sage-btn--is-loading & {
     opacity: 0;
   }
+
+  .sage-copy-btn & {
+    display: flex;
+  }
 }
 
 // Button groups allow for several buttons together to be spaced appropriately
