docs(modal rails): add divider and update description

--- a/docs/app/views/examples/components/modal/_preview.html.erb
+++ b/docs/app/views/examples/components/modal/_preview.html.erb
@@ -40,6 +40,8 @@ Basic modals contain a title, a body of content, and a footer with buttons.
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Destructive</h3>
 <p>Contain a title, a body of content, and a footer with buttons. The call to action button 
 in the footer contain error styling to indicate that the action is destructive.</p>
@@ -87,6 +89,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Header Icon</h3>
 <p>Modals can contain an icon in the header.</p>
 <%= sage_component SageButton, {
@@ -132,6 +136,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Header Image</h3>
 <p>Modals can contain a thumbnail image in the header.</p>
 <%= sage_component SageButton, {
@@ -173,6 +179,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Subheader</h3>
 <p>Modals can contain a subheader.</p>
 <%= sage_component SageButton, {
@@ -213,6 +221,8 @@ in the footer contain error styling to indicate that the action is destructive.<
     <% end %>
   <% end %>
 <% end %>
+
+<%= sage_component SageDivider, {} %>
 
 <h3>Footer</h3>
 <p>Modals contain a footer that can contain buttons and links</p>
@@ -267,6 +277,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Footer Aside</h3>
 <p>The footer aside is a section of the footer that can contain additional buttons or links.</p>
 <%= sage_component SageButton, {
@@ -320,6 +332,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Scrollable Content</h3>
 <p>Modals can be configured to allow scrolling of content. This option is useful when the header and footer needs to visible contain actions.</p>
 <%= sage_component SageButton, {
@@ -362,6 +376,8 @@ in the footer contain error styling to indicate that the action is destructive.<
     <% end %>
   <% end %>
 <% end %>
+
+<%= sage_component SageDivider, {} %>
 
 <h3>Sizes</h3>
 <p>Modals can be configured to be extra small, small, medium, or large.</p>
@@ -516,6 +532,8 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
+
 <h3>Fullscreen</h3>
 <p>Modals can be configured to take up the full screen.</p>
 <%= sage_component SageButton, {
@@ -548,6 +566,7 @@ in the footer contain error styling to indicate that the action is destructive.<
   <% end %>
 <% end %>
 
+<%= sage_component SageDivider, {} %>
 
 <h3>Animated</h3>
 <p>Modals can be configured to animate in from the top, left, or right.</p>
@@ -711,6 +730,8 @@ in the footer contain error styling to indicate that the action is destructive.<
     <% end %>
   <% end %>
 <% end %>
+
+<%= sage_component SageDivider, {} %>
 
 <%= md("
 <h3 class=\"SageClassnames::TYPE::HEADING_6\">Asynchronous Modal Setup</h3>
