feat(hero): rails - add props for inline start image option

--- a/docs/app/views/examples/components/hero/_props.html.erb
+++ b/docs/app/views/examples/components/hero/_props.html.erb
@@ -53,6 +53,12 @@
   <td><%= md('`large`') %></td>
 </tr>
 <tr>
+  <td><%= md('`image_start`') %></td>
+  <td><%= md('Sets the horizontal placement of the image to start within the Hero.') %></td>
+  <td><%= md('Boolean') %></td>
+  <td><%= md('`false`') %></td>
+</tr>
+<tr>
   <td><%= md('`title`') %></td>
   <td><%= md('Sets the title for the component.') %></td>
   <td><%= md('String') %></td>
